[package]
name = "example-io"
version = "0.1.0"
authors = ["wangweizhen <wangweizhen@bilibili.com>"]
edition = "2018"

[features]
default = ["protobuf-codec", "jemalloc", "sse", "portable"]
sse = ["engine_rocks/sse"]
tcmalloc = ["tikv_alloc/tcmalloc"]
jemalloc = ["tikv_alloc/jemalloc", "engine_rocks/jemalloc"]
mem-profiling = ["tikv_alloc/mem-profiling"]
portable = ["engine_rocks/portable"]
protobuf-codec = [
    "encryption/protobuf-codec",
    "engine_rocks/protobuf-codec",
    "grpcio/protobuf-codec",
    "keys/protobuf-codec",
    "kvproto/protobuf-codec",
    "txn_types/protobuf-codec",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-http = "2"
actix-rt = "1"
actix-web = "3"
async-std = "1"
bytes = "0.4"
chrono = "0.4"
cibo_util = { path = "components/cibo_util" }
clap = "2"
encryption = { path = "components/encryption" }
engine_panic = { path = "components/engine_panic", optional = true }
engine_rocks = { path = "components/engine_rocks" }
engine_traits = { path = "components/engine_traits" }
futures = "0.3"
grpcio = { version = "0.8", default-features = false, features = ["openssl-vendored"] }
keys = { path = "components/keys" }
kvproto = { path = "components/kvproto" }
lazy_static = "1.4"
libc = "0.2"
moni_middleware = { path = "components/moni_middleware" }
net2 = "0.2"
prometheus = { version = "0.10", features = ["nightly"] }
prost = "0.6"
protobuf = "2.8"
txn_types = { path = "components/txn_types" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-async = { version = "2.3", default-features = false }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
slog-json = "2.3"
slog-term = "2.4"
slog_derive = "0.1"
storage = { path = "components/storage" }
threadpool = { path = "components/threadpool" }
tikv_alloc = { path = "components/tikv_alloc" }
tokio = { version = "0.2", features = ["full"] }
toml = "0.5"

[dev-dependencies]
panic_hook = { path = "components/panic_hook" }
crc = "1.8.1"

[lib]
name = "greenhouse"

[[bin]]
name = "greenhouse-server"

[workspace]
members = [
  "components/cibo_util",
  "components/engine_rocks",
  "components/engine_traits",
  "components/engine_traits/tests",
  "components/panic_hook",
  "components/moni_middleware",
  "components/storage",
  "components/threadpool",
  "components/tikv_alloc"
]

[profile.dev]
opt-level = 0
debug = 1 # required for line numbers in tests, see tikv #5049
codegen-units = 4
lto = false
incremental = true
debug-assertions = false
overflow-checks = false
rpath = false

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
codegen-units = 1
lto = "thin"
incremental = false
panic = 'unwind'
debug-assertions = false
overflow-checks = false
rpath = false

# The benchmark profile is identical to release, except that lto = false
[profile.bench]
opt-level = 3
debug = false
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[profile.test]
opt-level = 0
debug = 1 # enable line numbers by default for easy test debugging
codegen-units = 16
lto = false
incremental = true
debug-assertions = true
overflow-checks = true
rpath = false

[patch.crates-io]
# TODO: remove this when new raft-rs is published.
fail = { git = "https://github.com/tikv/fail-rs.git", rev = "2cf1175a1a5cc2c70bd20ebd45313afd69b558fc"  }
protobuf = { git = "https://github.com/pingcap/rust-protobuf", rev = "65e9df20fbcbcf2409d5ee86a2332ecd04c534f8" }
protobuf-codegen = { git = "https://github.com/pingcap/rust-protobuf", rev = "65e9df20fbcbcf2409d5ee86a2332ecd04c534f8" }
raft = { git = "https://github.com/pingcap/raft-rs", branch = "master", default-features = false }
raft-proto= { git = "https://github.com/pingcap/raft-rs", branch = "master", default-features = false }