[package]
name = "example-io"
version = "0.1.0"
authors = ["wangweizhen <wangweizhen@bilibili.com>"]
edition = "2018"

[features]
default = ["tikv_alloc/jemalloc"]
tcmalloc = ["tikv_alloc/tcmalloc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
awc = "3"
actix-http = "2"
actix-rt = "2"
actix-web = "4"
async-std = "1"
bytes = "0.4"
chrono = "0.4"
cibo_util = { path = "components/cibo_util" }
clap = "2"
futures = "0.3"
lazy_static = "1.4"
libc = "0.2"
moni_middleware = { path = "components/moni_middleware" }
net2 = "0.2"
prometheus = { version = "0.10", features = ["nightly"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-async = { version = "2.3", default-features = false }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
slog-json = "2.3"
slog-term = "2.4"
slog_derive = "0.1"
storage = { path = "components/storage" }
threadpool = { path = "components/threadpool" }
tikv_alloc = { path = "components/tikv_alloc" }
tokio = { version = "1.13.1", features = ["full"] }
toml = "0.5"


[dev-dependencies]
panic_hook = { path = "components/panic_hook" }
crc = "1.8.1"

[lib]
name = "greenhouse"

[[bin]]
name = "greenhouse-server"

[workspace]
members = [
  "components/storage",
  "components/cibo_util",
  "components/pagecache",
  "components/panic_hook",
  "components/moni_middleware",
  "components/threadpool",
  "components/tikv_alloc"
]


[profile.dev]
opt-level = 0
debug = 1 # required for line numbers in tests, see tikv #5049
codegen-units = 4
lto = false
incremental = true
debug-assertions = false
overflow-checks = false
rpath = false

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = true
lto = "thin"
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

# The benchmark profile is identical to release, except that lto = false
[profile.bench]
opt-level = 3
debug = false
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[profile.test]
opt-level = 0
debug = 1 # enable line numbers by default for easy test debugging
codegen-units = 16
lto = false
incremental = true
debug-assertions = true
overflow-checks = true
rpath = false
