[package]
name = "cibo_util"
version = "0.1.0"
authors = ["Wangweizhen <wangweizhen@bilibili.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
backtrace = "0.3.15"
chrono = "0.4.6"
coarsetime = "0.1"
crc32fast = "1.2"
fxhash = "0.2.1"
fail = "0.2.1"
futures = "0.3"
lazy_static = "1.3.0"
libc = "0.2.54"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
openssl = { version = "0.10" }
pin-project = "0.4"
prometheus = { version = "0.10", features = ["nightly"] }
quick-error = "1.2.2"
rand = "0.7"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.89"
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-async = "2.3"
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
slog-json = "2.3"
slog-term = "2.4"
slog_derive = "0.1"
tempdir = "0.3"
tempfile = "3.0"
tikv_alloc = { path = "../tikv_alloc", default-features = false }
time = "0.1"
tokio = { version = "0.2", features = ["full"] }
utime = "0.2"

[dev-dependencies]
panic_hook = { path = "../panic_hook" }

[target.'cfg(target_os = "linux")'.dependencies]
procinfo = { git = "https://github.com/tikv/procinfo-rs", rev = "5125fc1a69496b73b26b3c08b6e8afc3c665a56e" }
procfs = "0.7"