[package]
name = "kvproto"
version = "0.0.2"
keywords = ["TiKV"]
edition = "2018"
build = "build.rs"

[lib]
name = "kvproto"
path = "src/lib.rs"

[features]
default = ["protobuf-codec"]
protobuf-codec = ["protobuf-build/grpcio-protobuf-codec", "raft-proto/protobuf-codec", "grpcio/protobuf-codec"]
prost-codec = ["prost", "prost-derive", "lazy_static", "protobuf-build/grpcio-prost-codec", "raft-proto/prost-codec", "grpcio/prost-codec"]

[dependencies]
protobuf = "=2.8.0"
prost = { version = "0.7", optional = true }
prost-derive = { version = "0.7", optional = true }
futures = "0.3.5"
grpcio = { version = "0.8", default-features = false, features = ["secure"] }
raft-proto = { version = "0.6.0-alpha", default-features = false }
lazy_static = { version = "1.3", optional = true }

[target.'cfg(any(not(linux), not(any(target_arch = "x86_64", target_arch = "aarch64"))))'.dependencies.grpcio]
version = "0.8.0"
default-features = false
features = ["secure", "use-bindgen"]

[build-dependencies]
protobuf-build = { version = "0.12", default-features = false }

[patch.crates-io]
raft-proto = { git = "https://github.com/tikv/raft-rs", rev = "ed74d64cf3eefa77f388be49c39482099430cd93" }
protobuf-codegen = { git = "https://github.com/pingcap/rust-protobuf", rev="b67d432c1b74350b38a5d96ddf885ac6c3ff46f5" }
protobuf = { git = "https://github.com/pingcap/rust-protobuf", rev="b67d432c1b74350b38a5d96ddf885ac6c3ff46f5" }
