[package]
name = "moni_middleware"
version = "0.1.0"
authors = ["wangweizhen <wangweizhen@bilibili.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.1"
actix-web = "2"
actix-service = "1"
futures = "0.3"
bytes = "0.5"
lazy_static = "1.3"
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "0e23a5baff302a9d7bccd85f8f31e43339c2f2c1" }
pin-project = "0.4"

[dependencies.prometheus]
git = "https://github.com/pingcap/rust-prometheus.git"
rev = "d919ccd35976b9b84b8d03c07138c1cc05a36087"
features = ["nightly", "push", "process"]