[package]
name = "moni_middleware"
version = "0.1.0"
authors = ["wangweizhen <wangweizhen@bilibili.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
awc = "3"
actix-service = "2"
actix-web = "4"
actix-utils = "3"
futures-core = { version = "0.3.7", default-features = false }
futures = "0.3"
bytes = "0.5"
lazy_static = "1.3"
log = "0.4"
pin-project-lite = "0.2.7"
prometheus = { version = "0.10", features = ["nightly"] }
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
time = { version = "0.3", default-features = false, features = ["formatting"] }
regex = "1.4"