[package]
name = "pagecache"
version = "0.1.0"
authors = ["wangweizhen <wangweizhen@bilibili.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
io_uring = ["liburing"]

[dependencies]
liburing = { version = "0.0.2", optional = true }
libc = "0.2.66" 
bytes = "0.5.4"
snap = "1.0.0"