[package]
name = "storage"
version = "0.1.0"
authors = ["wangweizhen <wangweizhen@bilibili.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compression = {version = "0.2.0", features = ["futures-write","gzip", "deflate", "brotli", "zstd"] }
futures = "0.3"
libc = "0.2"
lazy_static = "1.3"
quick-error = "1.2"
same-file = "1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-async = { version = "2.3", default-features = false }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "0e23a5baff302a9d7bccd85f8f31e43339c2f2c1" }
slog-json = "2.3"
slog-term = "2.4"
slog_derive = "0.1"
threadpool = { path = "../threadpool" }
tokio = { version = "0.2", features = ["full"] }
walkdir = "2.3"

[dependencies.prometheus]
git = "https://github.com/pingcap/rust-prometheus.git"
rev = "d919ccd35976b9b84b8d03c07138c1cc05a36087"
features = ["nightly", "push", "process"]
