[package]
name = "storage"
version = "0.1.0"
authors = ["wangweizhen <wangweizhen@bilibili.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zstd = "0.11.2+zstd.1.5.2"
futures = "0.3"
libc = "0.2"
lazy_static = "1.3"
prometheus = { version = "0.10", features = ["nightly"] }
quick-error = "1.2"
same-file = "1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-async = { version = "2.3", default-features = false }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
slog-json = "2.3"
slog-term = "2.4"
slog_derive = "0.1"
threadpool = { path = "../threadpool" }
tokio = { version = "1.13.1", features = ["full"] }
walkdir = "2.3"