[package]
name = "threadpool"
version = "0.1.0"
authors = ["wangweizhen <wangweizhen@bilibili.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "2"
cibo_util = { path = "../cibo_util" }
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "1.20.3", features = ["rt-multi-thread", "macros"] }